<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#12504A"

    tools:context=".MainActivity">

    <TextView

        android:id="@+id/textviewinput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#092321"
        android:gravity="right|bottom|center_vertical"
        android:padding="10dp"
        android:text="0"
        android:textColor="@color/white"

        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

    <Button
        android:layout_margin="2dp"

        android:id="@+id/button7"
        android:layout_width="6dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onDigit"
        android:text="@string/_7"
        android:textSize="30dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/buttonshap"
        tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"

            android:id="@+id/button8"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshap"
            android:onClick="onDigit"
            android:text="@string/_8"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"

            android:id="@+id/button9"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshap"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buttondivide"

            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="isoperator"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/operatorbuttons"
            android:text="@string/divide"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_weight="1"
        >

        <Button
            android:layout_margin="2dp"

            android:id="@+id/button4"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshap"
            android:text="@string/_4"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"

            android:id="@+id/button5"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshap"
            android:onClick="onDigit"
            android:text="@string/_5"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"

            android:id="@+id/button6"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1" android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshap"
            android:onClick="onDigit"
            android:text="@string/_6"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnmultiply"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"
            android:textColor="#FFFFFF"

            android:background="@drawable/operatorbuttons"
            android:onClick="isoperator"
            android:text="@string/mutliply"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:layout_margin="2dp"

            android:id="@+id/button1"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshap"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"

            android:id="@+id/button2"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshap"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"

            android:id="@+id/button3"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshap"
            android:text="@string/_3"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buttonsubtract"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="isoperator"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/operatorbuttons"
            android:text="@string/subtract"
            tools:ignore="UsingOnClickInXml"
           />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:layout_margin="2dp"

            android:id="@+id/buttondecimal"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ondecimalpoint"
            android:text="@string/decimal"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshap"

            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"

            android:id="@+id/button0"
            android:layout_width="6dp"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshap"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"

            android:id="@+id/buttonclrear"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onclear"
            android:textSize="25dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshap"
            android:text="@string/clear"

            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/buttonadd"
            android:layout_width="6dp"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/operatorbuttons"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="isoperator"
            android:text="@string/addition"
            tools:ignore="UsingOnClickInXml"

            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonequals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/equals"

            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/operatorbuttons"
            android:onClick="oneqal"
            />

    </LinearLayout>








</LinearLayout>